# FRACAS_team2

./: .env-template  .flaskenv  .gitignore  2023-08-09_meeting.md  2023-08-11_client_meeting.md  2023-08-11_meeting.md  Acceptance Tests.docx  CITS3200_43 Requirements & Stories.doc  Database.sql  Docs Table of Contents.md  README.md  RiskSheet - 1.xlsx  Running Tests.md  Skills audit.md  Test Data.xlsx  app.py  config.py  docker-compose.yml  generate-logs.sh  manual.sh  meeting 1.md  package.json  project  analyzing.docx  quickstart.sh  requirements.txt  restart.sh  setup.sh  stop.sh
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: index.html  login.html
backend/: .env-dev  Dockerfile  README.md  add_test_records.py  add_test_user.py  add_test_userteams.py  app.db  app.py  check-and-update-licenses.sh  config.py  docker-run-prod.sh  docker-run.sh  flask_run_test.py  gunicorn.conf.py  pyproject.toml  recreate-db.py  recreate-db.sh  requirements.txt
backend/app/: __init__.py  add_test_records.py  add_test_userteams.py  commands.py  forms.py  messages.py  models.py  routes.py  utils.py  validation.py
backend/app/models/: authentication.py  record.py  team.py
backend/app/routes/: authentication.py  bookmarks.py  get.py  record.py  team.py  user.py
backend/app/templates/: base.html  index.html  login.html  signup.html
backend/migrations/versions/: 072dc338fdc5_add_comments_table_instead.py  077edaec6502_redefine_relationship_betewen_user_and_.py  1383a9205050_.py  180153b10507_add_name_column_to_user.py  33610d0ec7c4_.py  35e4d07c6513_fix_missing_recordid_for_comments.py  3e5e119dede5_add_team_table.py  4ac7be479736_.py  642ec868d46a_team_in_records.py  6b4e74788d59_add_record_models.py  6dbd18031236_.py  79ea28ee2bb3_fix_missing_recordid_for_comments.py  7ae98add553f_fix_missing_recordid_for_comments.py  7ec2db418071_fix_missing_foreign_key_for_comments.py  8ad6007b34ef_initial_migration.py  a98084b5f2bb_force_subsystem_name_unique.py  b11bd9c1f16a_.py  d310dfd52b3c_.py  d92c480219fb_add_comments.py  f40cc7d3b77e_.py
backend/tests/: __init__.py  conftest.py  requirements.txt  test.db
backend/tests/functional/: test_selenium.py
backend/tests/unit/: test_login.py  test_signup.py  test_subsystem.py
env/: env-example.txt
frontend/: .env.development  Dockerfile  FRACAS Pages & Functionality.md  README.md  check-and-update-licenses.sh  docker-run.sh  next.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/app/: layout.tsx  members.tsx  page.tsx  teams.tsx
frontend/app/access/: page.tsx
frontend/app/components/: listItems.tsx  members.tsx  teams.tsx
frontend/app/login/: page.tsx
frontend/components/: LoginForm.tsx  SignInForm.tsx  SignUpForm.tsx  Theme.tsx
frontend/helpers/: api.ts  authWrapper.ts  constants.ts
frontend/src/: App.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(external)/: layout.tsx
frontend/src/app/(external)/access/: page.tsx
frontend/src/app/(external)/login/: page.tsx
frontend/src/app/(external)/password-reset/: page.tsx
frontend/src/app/(external)/password-reset-request/: page.tsx
frontend/src/app/(external)/signup/: page.tsx
frontend/src/app/(intenal)/: layout.tsx
frontend/src/app/(intenal)/admin-dash/: listItems.tsx  members.tsx  theme.tsx
frontend/src/app/(intenal)/createreport/: page.tsx
frontend/src/app/(intenal)/viewreport/: page.tsx
frontend/src/app/(internal)/: layout.tsx  page.js  page.tsx
frontend/src/app/(internal)/admin-dash/: page.tsx  teams.tsx
frontend/src/app/(internal)/createreport/: page.tsx
frontend/src/app/(internal)/dashboard/: page.tsx
frontend/src/app/(internal)/editreport/: page.tsx
frontend/src/app/(internal)/editreport/[id]/: page.tsx
frontend/src/app/(internal)/record-list/: page.tsx
frontend/src/app/(internal)/user-settings/: page.tsx
frontend/src/app/(internal)/viewreport/: page.tsx
frontend/src/app/(internal)/viewreport/[id]/: page.tsx
frontend/src/app/admin-dash/: page.tsx
frontend/src/app/createreport/: page.tsx
frontend/src/app/editreport/: page.tsx
frontend/src/app/personal-dash/: page.js
frontend/src/app/viewReports/: page.tsx
frontend/src/components/: CheckLogin.tsx  CheckSuperuser.tsx  LocalizedDate.tsx  MediaCard.tsx  PasswordResetRequest.tsx  ReportForm.tsx  ReportList.tsx  ReportStatusMessage.tsx  SignInForm.tsx  SignUpForm.tsx  SnackbarAlert.tsx  SubsystemSelector.tsx  ViewReport.tsx  listItems.tsx  members.tsx  teams.tsx
frontend/src/components/Dialogs/: ChangeLeader.tsx  ChangeTeam.tsx  DeleteConfirmation.tsx  NewSubsystem.tsx  NewUser.tsx
frontend/src/components/Tables/: members.tsx  teams.tsx
frontend/src/components/ThemeRegistry/: EmotionCache.tsx  ThemeRegistry.tsx  theme.ts
frontend/src/components/ViewReportComponents/: Comments.tsx  SubsystemMenu.tsx  TeamMenu.tsx
frontend/src/components/styles/: viewreport.css
frontend/src/helpers/: api.ts  authWrapper.ts  client_utils.ts  urls.ts
license/: BACKEND-DEPENDENCIES-LICENSES.txt  FRONTEND-DEPENDENCIES-LICENSES.txt
setup/: .env.production  backend-env.txt  backend.service  fracas-nginx.conf  frontend.service
user/: .gitignore
user/backend/: README.md  app.db  app.py  config.py  docker-run-prod.sh  docker-run.sh
user/backend/app/models/: authentication.py
user/backend/app/routes/: bookmarks.py  record.py  user.py
user/backend/migrations/versions/: a2670853ee3f_.py
user/frontend/: package-lock.json  tsconfig.json
user/frontend/app_old/: layout.tsx
user/frontend/src/app/(internal)/createreport/: page.tsx
user/frontend/src/app/(internal)/editreport/[id]/: page.tsx
user/frontend/src/app/(internal)/record-list/: page.tsx
user/frontend/src/components/: ReportForm.tsx  SignUpForm.tsx  SnackbarAlert.tsx
user/frontend/src/components/Dialogs/: NewTeam.tsx
user/frontend/src/components/ThemeRegistry/: ThemeRegistry.tsx
user/frontend/src/components/ViewReportComponents/: TeamMenu.tsx
user/frontend/src/helpers/: authWrapper.ts
